--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<a href="https://github.com/luc99a" class="image icon fa-code" ></a>
 						<div class="content">
 							<h3>Luc99a's code</h3>
-							<p>You can find updates on my coding here on <a href="https://github.com/luc99a" >Github</a>, Some repositories are empty and the RemoteChatPlugin one has a strnge thing about configuration which was just a test. <br /> I have some nicer code in my <a href="https://gist.github.com/luc99a" >Gists</a></p>
+							<p>You can find updates on my coding here on <a href="https://github.com/luc99a" >Github</a>, Some repositories are empty and the RemoteChatPlugin one has a strange thing about configuration which was just a test. <br /> I have some other code in my <a href="https://gist.github.com/luc99a" >Gists</a></p>
 						</div>
 					</section>
 				</div>
